gccida/g1/find_mem_givs
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_mem_givs/src/loop.c:5894:1: error: use of undeclared identifier 'induction_1'
induction_1 *v7; // rbp 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_mem_givs/src/loop.c:5894:14: error: use of undeclared identifier 'v7'
induction_1 *v7; // rbp 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_mem_givs/src/loop.c:5934:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2)) ) 
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_mem_givs/src/loop.c:5936:1: error: use of undeclared identifier 'v7'
v7 = ( induction_1 *)xmalloc( 0xA8uLL); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_mem_givs/src/loop.c:5936:21: error: expected expression
v7 = ( induction_1 *)xmalloc( 0xA8uLL); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_mem_givs/src/loop.c:5936:8: error: use of undeclared identifier 'induction_1'
v7 = ( induction_1 *)xmalloc( 0xA8uLL); 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_mem_givs/src/loop.c:5939:1: error: use of undeclared identifier 'v7'
v7, 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_mem_givs/src/loop.c:5951:1: error: use of undeclared identifier 'v7'
v7->mem = x; 
^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_mem_givs/src/obj/loop.o] Error 1
